# ExchangeRateService

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: example.toml
src/exchange_rate_service/common/: config_loader.py  configs.py  converter.py  storage.py
src/exchange_rate_service/tg_bot/: __main__.py  config.py  contollers.py  utils.py
src/exchange_rate_service/updater/: __main__.py  config.py  fetch_and_update.py
